Segundo commit y avance xd

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>hola como estas bien y tu xd</h1>
+    <p>VAN A REPROBAR TODOS XD</p>
 </body>
+<footer>
+    <p>ewe</p>
+    <h1>me debes 20 varos we</h1>
+</footer>
 </html>
